--- a/main.css
+++ b/main.css
@@ -3,12 +3,13 @@ body {
 }
 
 .heading {
-    background: rgba(255, 255, 255, 0.2); box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); color: rgb(95, 3, 95); padding: 10px;
-    width: 70%; margin-top: 30vh; text-align: center; font-family: 'Times New Roman', Times, serif;
+    background: rgba(255, 255, 255, 0.2); box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5); 
+    color:purple; padding: 10px; width: 70%; margin-top: 30vh; text-align: center; 
+    font-family: cursive; align-items: center; justify-content: center;
 }
 
 .btn {
-    color:rgb(95, 3, 95);
+    color:purple;
 }
 
 .btn:focus {
@@ -16,7 +17,7 @@ body {
 }
 
 .btn:hover {
-    color: plum;
+    color:green;
 }
 
 .road {
